src/objects/Subtract__c.object
<CustomObject>
    <fields>
        <fullName>Grid_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option if the legal description cannot correctly be mapped based on quarter calls and/or lots</inlineHelpText>
        <label>Grid Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instrument_Lease_Royalty__c</fullName>
        <description>Royalty from Instrument Object</description>
        <formula>Instrument__r.Lease_Royalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Royalty from Instrument Object</inlineHelpText>
        <label>Instrument Lease Royalty</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instrument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instrument</label>
        <referenceTo>Instrument__c</referenceTo>
        <relationshipLabel>Subtracts</relationshipLabel>
        <relationshipName>Instrument_Tracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <formula>TEXT(Instrument__r.Lease_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessee__c</fullName>
        <formula>Instrument__r.Lessee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lessee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessor__c</fullName>
        <formula>Instrument__r.Lessor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lessor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mineral_Interest__c</fullName>
        <description>Subtract NMA Computed / Gross Subtract Acres</description>
        <formula>NMA_Computed__c / Subtract_Gross_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtract NMA Computed / Gross Subtract Acres</inlineHelpText>
        <label>Mineral Interest</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMA_Computed__c</fullName>
        <description>For NRA Type: Subtract Acres * 1/NRA Conversion Factor
For NMA Type: Subtract Acres</description>
        <formula>CASE( netAcreageUnits__c ,
   &quot;NRA&quot;,  Subtract_Acres__c /NRA_Conversion_Factor__c ,
    Subtract_Acres__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For NRA Type: Subtract Acres * 1/NRA Conversion Factor
For NMA Type: Subtract Acres</inlineHelpText>
        <label>NMA Computed</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRA_Computed__c</fullName>
        <description>NRA Conversion Factor * NMA Computed</description>
        <formula>NRA_Conversion_Factor__c *  NMA_Computed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NRA Conversion Factor * NMA Computed</inlineHelpText>
        <label>NRA Computed</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRA_Conversion_Factor__c</fullName>
        <description>Instrument Lease Royalty / .125</description>
        <formula>Instrument_Lease_Royalty__c / 0.125</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Instrument Lease Royalty / .125</inlineHelpText>
        <label>NRA Conversion Factor</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royalty_Type__c</fullName>
        <formula>TEXT(Instrument__r.Royalty_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royalty Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtract_Acres__c</fullName>
        <label>Subtract Acres</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtract_Full_Legal_Description__c</fullName>
        <label>Subtract Full Legal Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subtract_Gross_Acres__c</fullName>
        <label>Subtract Gross Acres</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtract_NRI__c</fullName>
        <description>If Subtract NRI Actual is blank, use Estimate Calculation: Mineral Interest *  Instrument Lease Royalty</description>
        <formula>Mineral_Interest__c *  Instrument_Lease_Royalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Subtract NRI Actual is blank, use Estimate Calculation: Mineral Interest *  Instrument Lease Royalty</inlineHelpText>
        <label>Subtract NRI</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtract_Quarter_Call__c</fullName>
        <label>Subtract Quarter Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract__c</fullName>
        <label>Tract</label>
        <referenceTo>Tract__c</referenceTo>
        <relationshipName>Instrument_Tracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isDupeFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field created to flag the duplicate subtract records</description>
        <label>isDupeFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netAcreageUnits__c</fullName>
        <description>Net Acreage Units (from Tract)</description>
        <formula>TEXT(Tract__r.netAcreageUnits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Acreage Units (from Tract)</inlineHelpText>
        <label>Net Acreage Units</label>
        <type>Text</type>
    </fields>
    <label>Subtract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tract__c</columns>
        <columns>Subtract_Gross_Acres__c</columns>
        <columns>Subtract_Acres__c</columns>
        <columns>Subtract_Full_Legal_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000000}</displayFormat>
        <label>Subtract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subtracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>